增加班干部竞选和投票功能

--- a/frontend/pages/dashboard/dashboard.wxss
+++ b/frontend/pages/dashboard/dashboard.wxss
@@ -145,6 +145,10 @@
   background-color: #f6ffed;
 }
 
+.election-icon {
+  background-color: #fff7e6;
+}
+
 .function-name {
   font-size: 24rpx;
   color: #333333;
